--- a/entrega-a-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
+++ b/entrega-a-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,8 +25,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player.tscn", "res://mob.tscn", "res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://player.tscn", "res://mob.tscn", "res://main.tscn", "res://hud.tscn")
+current_scene="res://hud.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd", "res://mob.gd", "res://player.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://hud.gd", "res://main.gd", "res://mob.gd", "res://player.gd"]
+selected_script="res://hud.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
