--- a/entrega-1y2-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
+++ b/entrega-1y2-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://entities/turret.tscn", "res://entities/player.tscn", "res://entities/abs_projectile.tscn", "res://main.tscn")
+current_scene="res://entities/abs_projectile.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd", "res://player.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://entities/hand.gd", "res://main.gd", "res://entities/player.gd", "res://projectile.gd", "res://entities/turret.gd"]
+selected_script="res://projectile.gd"
 open_help=["TextureRect"]
 script_split_offset=70
 list_split_offset=0
