--- a/entrega-1y2-garcino-ruiz-franco/.godot/editor/script_editor_cache.cfg
+++ b/entrega-1y2-garcino-ruiz-franco/.godot/editor/script_editor_cache.cfg
@@ -1,21 +1,3 @@
-[res://player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 39,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 15,
-"selection_from_line": 6,
-"selection_to_column": 39,
-"selection_to_line": 6,
-"syntax_highlighter": "GDScript"
-}
-
 [res://main.gd]
 
 state={
@@ -24,7 +6,63 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://entities/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 8.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://entities/turret.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://entities/hand.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 79,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://projectile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
