--- a/entrega-1y2-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
+++ b/entrega-1y2-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/")
+dock_filesystem_selected_paths=PackedStringArray("res://entities/projectile.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://entities/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://entities/turret.tscn", "res://entities/player.tscn", "res://entities/abs_projectile.tscn", "res://main.tscn")
-current_scene="res://entities/abs_projectile.tscn"
+open_scenes=PackedStringArray("res://main.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -35,8 +35,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://entities/hand.gd", "res://main.gd", "res://entities/player.gd", "res://projectile.gd", "res://entities/turret.gd"]
-selected_script="res://projectile.gd"
-open_help=["TextureRect"]
+selected_script="res://entities/hand.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
