--- a/entrega-1y2-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
+++ b/entrega-1y2-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,23 +10,23 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-521
+dock_hsplit_3=-264
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://entities/projectile.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://entities/")
+dock_filesystem_selected_paths=PackedStringArray("res://entities/turret.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://entities/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://entities/turret.tscn", "res://entities/turret_projectile.tscn")
+current_scene="res://entities/turret.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://entities/hand.gd", "res://main.gd", "res://entities/player.gd", "res://projectile.gd", "res://entities/turret.gd"]
-selected_script="res://entities/hand.gd"
+selected_script="res://entities/turret.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
