--- a/entrega-1y2-garcino-ruiz-franco/.godot/editor/script_editor_cache.cfg
+++ b/entrega-1y2-garcino-ruiz-franco/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 9,
+"selection_from_line": 6,
+"selection_to_column": 19,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,26 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 4.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://entities/turret.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
+"row": 28,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 28,
+"selection_to_column": 22,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,10 +39,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -59,11 +53,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 19,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://entities/turret.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
