--- a/entrega-3-garcino-ruiz-franco/.godot/global_script_class_cache.cfg
+++ b/entrega-3-garcino-ruiz-franco/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"Jugador",
+"icon": "",
+"language": &"GDScript",
+"path": "res://entities/player.gd"
+}, {
 "base": &"Node2D",
 "class": &"Projectile",
 "icon": "",
