--- a/entrega-4-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
+++ b/entrega-4-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/")
+dock_filesystem_selected_paths=PackedStringArray("res://entities/turret.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://resources/player/", "res://entities/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,7 +25,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://entities/turret.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://entities/turret.tscn")
 current_scene="res://entities/turret.tscn"
 center_split_offset=-350
 selected_default_debugger_tab_idx=0
