--- a/entrega-a-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
+++ b/entrega-a-garcino-ruiz-franco/.godot/editor/editor_layout.cfg
@@ -10,14 +10,14 @@ dock_split_2=115
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-531
+dock_hsplit_3=-357
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://art/enemyWalking_1.png")
+dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player.tscn", "res://mob.tscn", "res://main.tscn", "res://hud.tscn")
-current_scene="res://hud.tscn"
+open_scenes=PackedStringArray("res://main.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://main.gd", "res://mob.gd", "res://player.gd"]
-selected_script="res://hud.gd"
+selected_script="res://main.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
